package org.hyades.client.ossindex;

import org.hyades.proto.vuln.v1.Vulnerability;
import org.junit.jupiter.api.Test;

import java.util.List;

import static org.assertj.core.api.Assertions.assertThat;
import static org.hyades.client.ossindex.ModelConverter.convert;
import static org.hyades.proto.vuln.v1.ScoreMethod.SCORE_METHOD_CVSSV3;
import static org.hyades.proto.vuln.v1.Severity.SEVERITY_CRITICAL;
import static org.hyades.proto.vuln.v1.Source.SOURCE_NVD;
import static org.hyades.proto.vuln.v1.Source.SOURCE_OSSINDEX;

public class ModelConverterTest {

    @Test
    public void testModelConverter() {
        var componentReportVulnerability = new ComponentReportVulnerability(
                "CVE-2020-7471",
                "CVE-2020-7471",
                "[CVE-2020-7471] CWE-89: Improper Neutralization of Special Elements used in an SQL Command ('SQL Injection')",
                """
                        Django 1.11 before 1.11.28, 2.2 before 2.2.10, and 3.0 before 3.0.3 allows
                        SQL Injection if untrusted data is used as a StringAgg delimiter (e.g., in Django
                        applications that offer downloads of data as a series of rows with a user-specified
                        column delimiter). By passing a suitably crafted delimiter to a
                        contrib.postgres.aggregates.StringAgg instance, it was possible to break escaping
                        and inject malicious SQL.
                        """,
                9.8f,
                "CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:H/A:H",
                "CWE-89",
                "CVE-2020-7471",
                "https://ossindex.sonatype.org/vulnerability/CVE-2020-7471?component-type=pypi&component-name=django",
                List.of(
                        "http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2020-7471",
                        "https://www.djangoproject.com/weblog/2020/feb/03/security-releases/",
                        "https://www.openwall.com/lists/oss-security/2020/02/03/1"
                )
        );

        Vulnerability vulnerability = convert(componentReportVulnerability);
        assertThat(vulnerability).isNotNull();
        assertThat(vulnerability.getId()).isEqualTo("CVE-2020-7471");
        assertThat(vulnerability.getSource()).isEqualTo(SOURCE_NVD);
        assertThat(vulnerability.getTitle()).startsWith("[CVE-2020-7471] CWE-89: Improper").hasSize(108);
        assertThat(vulnerability.getDescription()).startsWith("Django 1.11 before 1.11.28").hasSize(413);
        assertThat(vulnerability.getCwesList()).containsOnly(89);
        assertThat(vulnerability.getRatingsList()).satisfiesExactly(
                rating -> {
                    assertThat(rating.getSource()).isEqualTo(SOURCE_OSSINDEX);
                    assertThat(rating.getMethod()).isEqualTo(SCORE_METHOD_CVSSV3);
                    assertThat(rating.getScore()).isEqualTo(9.8);
                    assertThat(rating.getVector()).isEqualTo("CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:H/A:H");
                    assertThat(rating.getSeverity()).isEqualTo(SEVERITY_CRITICAL);
                }
        );
        assertThat(vulnerability.getReferencesList()).satisfiesExactly(
                reference -> {
                    assertThat(reference.getUrl()).isEqualTo("https://ossindex.sonatype.org/vulnerability/CVE-2020-7471?component-type=pypi&component-name=django");
                    assertThat(reference.hasDisplayName()).isFalse();
                },
                reference -> {
                    assertThat(reference.getUrl()).isEqualTo("http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2020-7471");
                    assertThat(reference.hasDisplayName()).isFalse();
                },
                reference -> {
                    assertThat(reference.getUrl()).isEqualTo("https://www.djangoproject.com/weblog/2020/feb/03/security-releases/");
                    assertThat(reference.hasDisplayName()).isFalse();
                },
                reference -> {
                    assertThat(reference.getUrl()).isEqualTo("https://www.openwall.com/lists/oss-security/2020/02/03/1");
                    assertThat(reference.hasDisplayName()).isFalse();
                }
        );
    }

}
